plugins {
    id 'java'
    id 'jacoco'
    id 'info.solidsoft.pitest' version '1.9.0' // Use the latest version of the PITest plugin
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

pitest {
    junit5PluginVersion = '1.2.0'
    targetClasses = ['MathUtilsFixed']  //by default "${project.group}.*"
    targetTests = ['MathUtilsTest']
    threads = 4
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.assertj:assertj-swing:3.17.1'
    testImplementation 'org.assertj:assertj-swing-junit:3.17.1'
    testImplementation 'junit:junit:4.13.2'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.9.2'
    testImplementation 'org.mockito:mockito-core:4.+'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = true
        html.required = true
    }
}

jacoco {
    toolVersion = "0.8.9"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    systemProperty "java.awt.headless", "false"
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
}


jar {
    manifest {
        attributes 'Main-Class': 'Main'
    }
}


tasks.withType(Test) {
    testLogging {
        exceptionFormat "full"
        events "started", "skipped", "passed", "failed"
        showStandardStreams true
    }
}